<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1"
              android:background="@color/white"
              android:gravity="center">
   <ImageView
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/go"
            />
   <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/green_arrow"/>
    <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/ForgotUI"
            android:textColor="@color/NavigationColor"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <TextView 
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:text="@string/Detial"
       android:textColor="@color/gray"
       android:textSize="15sp"/>
    
    <TextView 
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:text="@string/CardNumber"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    <EditText
            android:layout_width="200dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/ForgotCardNumber" android:layout_weight="0.05"
            android:inputType="number"
            android:hint="@string/CardNumberInput"
            android:singleLine="true"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    
    <TextView 
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:text="@string/CVV"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    <EditText
            android:layout_width="200dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/ForgotCVV" android:layout_weight="0.05"
            android:hint="@string/CVVInput"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:gravity="center_horizontal">
    <Button
            android:layout_width="90dp"
            android:layout_height="26dp"
            android:text="@string/Submit"
            android:background="@color/Button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/forgotSubmit"/>
    <Button
            android:layout_width="90dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Cancle"
            android:background="@color/Button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/forgotCancle"/>
    </LinearLayout>
   </LinearLayout>