<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1"
              android:background="@color/white"
              android:gravity="center">
    <ImageView
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/go"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|left">
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/green_arrow"/>
    <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/LoginTo"
            android:textColor="@color/NavigationColor"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|left">
    <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/UserID"
            android:textColor="@color/NavigationColor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="left"/>
    
    <TextView 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/UserID"
            android:textColor="@color/gray"
            android:textSize="15sp"/>
    </LinearLayout>
    
    <EditText
            android:layout_width="200dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/Password" android:layout_weight="0.05"
            android:hint="@string/Password"
            android:singleLine="true"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
	<LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:gravity="center_horizontal">
    <Button
            android:layout_width="90dp"
            android:layout_height="26dp"
            android:text="@string/Login"
            android:background="@color/Button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/loginLogin"/>
    <Button
            android:layout_width="90dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Cancle"
            android:background="@color/Button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/loginCancle"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:gravity="center_vertical|left">
       <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/arrow_blue"/>
        <TextView
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/ForgotPassword"
                android:textColor="@color/forgotLink"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/ForgotPassword"/>
    </LinearLayout>

</LinearLayout>

