<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1"
              android:background="@color/white"
              android:gravity="center">
   <ImageView
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/go"
            />

   <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/green_arrow"/>
    <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/CreaterNewUser"
            android:textColor="@color/NavigationColor"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/CardNumber"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    <TextView 
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/CreaterUserID"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateCardNumber"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateUserId"
            android:singleLine="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/CVV"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    <TextView 
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/CreaterPwd"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateCVV"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreatePwd"
            android:singleLine="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="150dp"
       android:layout_height="20dp"/>
    <TextView 
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/ConfirmPwd"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/ConfirmPwd"
            android:singleLine="true"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/Email"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    <TextView 
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/ConfirmEmail"
       android:textColor="@color/NavigationColor"
       android:textSize="15sp"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/ConfirmEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/setbar_bg"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:gravity="center_horizontal">
    <Button
            android:layout_width="90dp"
            android:layout_height="26dp"
            android:text="@string/Submit"
            android:background="@color/Button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/CreateSubmit"/>
    <Button
            android:layout_width="90dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:text="@string/Cancle"
            android:background="@color/Button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/Createcancle"/>
    </LinearLayout>
   </LinearLayout>