<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

    <com.example.slide.SlidingLayout
            android:id="@+id/slidingLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

        <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:weightSum="1"
                        android:background="@color/backgroud"
                        android:gravity="center"
                        android:id="@+id/menu">
            <ListView
                    android:entries="@array/menu"
                    android:id="@+id/menuList"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
            </ListView>

        </RelativeLayout>

        <LinearLayout
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical"
                      android:weightSum="1"
                      android:background="@color/white"
                      android:gravity="center"
                      android:id="@+id/customerHome">

            <ImageView
	            android:layout_width="100dp"
	            android:layout_height="70dp"
	            android:contentDescription="@string/app_name"
	            android:background="@drawable/go"
	            />
          <LinearLayout
			           android:orientation="horizontal"
			           android:layout_height="wrap_content"
			           android:layout_width="300dp"
			           android:layout_marginTop="5dp"
			           android:gravity="center_vertical">
		    <ImageView
		        android:layout_width="17dp"
		        android:layout_height="17dp"
		        android:contentDescription="@string/app_name"
		        android:background="@drawable/green_arrow"/>
		    <TextView
		            android:layout_width="200dp"
		            android:layout_height="wrap_content"
		            android:text="@string/CustomerInfo"
		            android:textColor="@color/NavigationColor"
		            android:textSize="16sp"
		            android:textStyle="bold"/>
	    </LinearLayout>
	    
          <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="140dp"
       android:layout_height="wrap_content"
       android:text="@string/Name"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:textSize="15sp"
       android:gravity="center"/>
    <TextView 
       android:layout_width="140dp"
       android:layout_height="wrap_content"
       android:text="@string/Address"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:layout_marginLeft="20dp"
       android:textSize="15sp"
       android:gravity="center"/>
    </LinearLayout>
    
          <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="140dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoName"
       android:textColor="@color/black"
       android:textSize="15sp"
       android:gravity="left"/>
    <TextView 
       android:layout_width="140dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoAddress"
       android:textColor="@color/black"
       android:layout_marginLeft="20dp"
       android:textSize="15sp"
       android:gravity="left"/>
    </LinearLayout>
          
          <LinearLayout
			           android:orientation="horizontal"
			           android:layout_height="wrap_content"
			           android:layout_width="300dp"
			           android:layout_marginTop="5dp"
			           android:gravity="center_vertical">
		    <ImageView
		        android:layout_width="17dp"
		        android:layout_height="17dp"
		        android:contentDescription="@string/app_name"
		        android:background="@drawable/green_arrow"/>
		    <TextView
		            android:layout_width="200dp"
		            android:layout_height="wrap_content"
		            android:text="@string/CardAndBalance"
		            android:textColor="@color/NavigationColor"
		            android:textSize="16sp"
		            android:textStyle="bold"/>
	    </LinearLayout>
	    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="180dp"
       android:layout_height="wrap_content"
       android:text="@string/CN"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:textSize="15sp"
       android:gravity="center"/>
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:text="@string/Status"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:layout_marginLeft="20dp"
       android:textSize="15sp"
       android:gravity="center"/>
    </LinearLayout>
          <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="180dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoCN"
       android:textColor="@color/black"
       android:textSize="15sp"
       android:gravity="left"/>
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoStatus"
       android:textColor="@color/black"
       android:layout_marginLeft="20dp"
       android:textSize="15sp"
       android:gravity="left"/>
    </LinearLayout>
    
          <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="90dp"
       android:layout_height="wrap_content"
       android:text="@string/ID"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:textSize="15sp"
       android:gravity="center"/>
    <TextView 
       android:layout_width="90dp"
       android:layout_height="wrap_content"
       android:text="@string/ED"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="center"/>
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:text="@string/CB"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="center"/>
    </LinearLayout>
          <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="90dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoID"
       android:textColor="@color/black"
       android:textSize="15sp"
       android:gravity="left"/>
    <TextView 
       android:layout_width="90dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoED"
       android:textColor="@color/black"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="left"/>
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoCB"
       android:textColor="@color/black"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="left"/>
    </LinearLayout>
          
          <LinearLayout
			           android:orientation="horizontal"
			           android:layout_height="wrap_content"
			           android:layout_width="300dp"
			           android:layout_marginTop="5dp"
			           android:gravity="center_vertical">
		    <ImageView
		        android:layout_width="17dp"
		        android:layout_height="17dp"
		        android:contentDescription="@string/app_name"
		        android:background="@drawable/green_arrow"/>
		    <TextView
		            android:layout_width="250dp"
		            android:layout_height="wrap_content"
		            android:text="@string/AutoMatedDN"
		            android:textColor="@color/NavigationColor"
		            android:textSize="16sp"
		            android:textStyle="bold"/>
	    </LinearLayout>
	    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:text="@string/moc"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:textSize="15sp"
       android:gravity="center"/>
    </LinearLayout>
     <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoMoc"
       android:textColor="@color/black"
       android:textSize="15sp"
       android:gravity="left"/>
    </LinearLayout>
	   <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:text="@string/el"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:textSize="15sp"
       android:gravity="center"/>
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:text="@string/phone"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="center"/>
    <TextView 
       android:layout_width="80dp"
       android:layout_height="wrap_content"
       android:text="@string/SMS"
       android:textColor="@color/black"
       android:background="@color/backgroudInfo"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="center"/>
    </LinearLayout>
          <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:gravity="center_vertical">
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoEL"
       android:textColor="@color/black"
       android:textSize="15sp"
       android:gravity="left"/>
    <TextView 
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoPhone"
       android:textColor="@color/black"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="left"/>
    <TextView 
       android:layout_width="80dp"
       android:layout_height="wrap_content"
       android:id="@+id/infoSMS"
       android:textColor="@color/black"
       android:layout_marginLeft="10dp"
       android:textSize="15sp"
       android:gravity="left"/>
    </LinearLayout>
          
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray"
                    />

            <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@color/menuPay">
            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/menu"
                    android:id="@+id/menuLink"/>
               <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/pay"
                        android:id="@+id/payLink"/>
               </LinearLayout>

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    />

            <Button
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/LoginOut"
                    android:background="@color/Button"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/LoginOut"/>

        </LinearLayout>

    </com.example.slide.SlidingLayout>

</LinearLayout>